--- a/index.html
+++ b/index.html
@@ -7,17 +7,16 @@
 
 <body>
 
-  <h1>Your Name</h1>
+  <h1>Kyler Pavelka</h1>
 
-  <img src="https://placehold.it/200x200" alt="Your Name">
+  <img src="https://placehold.it/200x200" alt="Kyle Pavelka">
 
   <p>Write a short paragraph about yourself or some placeholder text.</p>
   <p>A second short paragraph about yourself or some placeholder text.</p>
 
   <ul>
-    <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
-    <li><strong>Github:</strong> <a href="#">sampleName</a></li>
-    <li><strong>Twitter:</strong> <a href="#">coming soon</a></li>
+    <li><strong>Email:</strong> <a href="#">kylepavelka1@gmail.com</a></li>
+    <li><strong>Github:</strong> <a href="#">Loki-codes</a></li>
   </ul>
 
   <table>
@@ -27,24 +26,23 @@
       <th>Games</th>
     </tr>
     <tr>
-      <td>The Hobbit</td>
-      <td>Hot Fuzz</td>
-      <td>Dark Souls</td>
+      <td>Stranger In A Strange Land</td>
+      <td>Cloud Atlas</td>
+      <td>Skyrim</td>
     </tr>
     <tr>
-      <td>The Name of the Wind</td>
-      <td>The Avengers</td>
-      <td>The Last of Us</td>
+      <td>The Courage To Be Disliked</td>
+      <td>Pan's Labrynth</td>
+      <td>What Remains of Edith Finch</td>
     </tr>
     <tr>
-      <td>The Girl With All the Gifts</td>
-      <td>The Matrix</td>
-      <td>Dragon Age: Origins</td>
+      <td>Ishmael</td>
+      <td>Brother Bear</td>
+      <td>Dragon Age: Inquisition</td>
     </tr>
   </table>
 
   <!-- Bonus link to last class page -->
-  <a href="../../../../1/Activities/04-Stu_MyFirst_HTML/Solved/my-first-bonus.html">My First HTML Bonus</a>
 
 </body>
 
